[tool.poetry]
name = "easylock"
version = "0.1.0"
description = ""
authors = [ "Cologler <skyoflw@gmail.com>" ]
license = "MIT"

  [tool.poetry.dependencies]
  python = "^3.8"

  [tool.poetry.dev-dependencies]
  pytest = "^6.2.4"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = [ "poetry-core>=1.0.0", "poetry-dynamic-versioning" ]
build-backend = "poetry.core.masonry.api"
